--- a/windows/python/x64_MT/PC/bdist_wininst/bdist_wininst.vcxproj.filters
+++ b/windows/python/x64_MT/PC/bdist_wininst/bdist_wininst.vcxproj.filters
@@ -18,43 +18,43 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="extract.c">
+    <ClCompile Include="..\PC\bdist_wininst\extract.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="install.c">
+    <ClCompile Include="..\PC\bdist_wininst\install.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Modules\zlib\adler32.c">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="..\Modules\zlib\adler32.c">
+      <Filter>Source Files\zlib</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Modules\zlib\crc32.c">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="..\Modules\zlib\crc32.c">
+      <Filter>Source Files\zlib</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Modules\zlib\inffast.c">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="..\Modules\zlib\inffast.c">
+      <Filter>Source Files\zlib</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Modules\zlib\inflate.c">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="..\Modules\zlib\inflate.c">
+      <Filter>Source Files\zlib</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Modules\zlib\inftrees.c">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="..\Modules\zlib\inftrees.c">
+      <Filter>Source Files\zlib</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Modules\zlib\zutil.c">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="..\Modules\zlib\zutil.c">
+      <Filter>Source Files\zlib</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="archive.h">
+    <ClInclude Include="..\PC\bdist_wininst\archive.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="install.rc">
-      <Filter>Source Files</Filter>
+    <ResourceCompile Include="..\PC\bdist_wininst\install.rc">
+      <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="PythonPowered.bmp">
+    <None Include="..\PC\bdist_wininst\PythonPowered.bmp">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
